--- a/index.html
+++ b/index.html
@@ -375,20 +375,20 @@
                 </h2>
                 <div class="grid grid-cols-1 md:grid-cols-4 gap-6 mb-12 ">
                     <div class="product-card bg-white shadow-lg rounded-lg p-4 flex flex-col items-center text-center">
-                        <a href="knit-men-views.html"><img src="image/men1.png" alt="Women's beige cardigan with red floral embroidery"
+                        <a href="knit-men-views.html"><img src="image/knit all produts/2.jpg" alt="Women's beige cardigan with red floral embroidery"
                                 class="mb-3"></a>
                         <span class="text-gray-700 font-semibold">Men 004</span>
                     </div>
                     <div class="product-card bg-white shadow-lg rounded-lg p-4 flex flex-col items-center text-center">
-                        <a href="kinit-women-views.html"><img src="image/women.jpg" alt="Kids' navy blue jacket with patch" class="mb-3"></a>
+                        <a href="knit-kids-views.html"><img src="image/women.jpg" alt="Kids' navy blue jacket with patch" class="mb-3"></a>
                         <span class="text-gray-700 font-semibold">women 001</span>
                     </div>
                     <div class="product-card bg-white shadow-lg rounded-lg p-4 flex flex-col items-center text-center">
-                        <a href="knit-kids-views.html"><img src="image/kids.jpg" alt="Kids' black sweater" class="mb-3"></a>
+                        <a href="knit-strikar.html"><img src="image/kids.jpg" alt="Kids' black sweater" class="mb-3"></a>
                         <span class="text-gray-700 font-semibold">Kids 002</span>
                     </div>
                     <div class="product-card bg-white shadow-lg rounded-lg p-4 flex flex-col items-center text-center">
-                        <a href="knit-men-views.html"><img src="image/men2.jpg" alt="Kids' grey and black striped sweater"
+                        <a href="knit-full.html"><img src="image/men2.jpg" alt="Kids' grey and black striped sweater"
                                 class="mb-3"></a>
                         <span class="text-gray-700 font-semibold">Kids 003</span>
                     </div>
