--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="header-content ">
                 <div class="header-logo">
                     
-                    <a href="index.html"> <img class=" rounded-full" src="image/logo.jpg"></a>
+                    <a href="index.html"> <img class=" " src="image/logo.jpg"></a>
                     
 
                 </div>
