--- a/faq.html
+++ b/faq.html
@@ -292,7 +292,7 @@
                             <div class="space-y-4">
                                 <div class="font-semibold">FACTORY INFORMATION:</div>
                                 <p>Where are the Factory Located?</p>
-                                <p>All the Factories are located in side in side in Bangladesh.</p>
+                                <p>All the Factories are located  in side in Bangladesh.</p>
                                 <p>Are the factories approved by accord & alliance compliance?</p>
                                 <p>Yes, factories must approved & fulfill as per customer requirements.</p>
                                 <p>Are the selected factories properly maintaining compliance as per labor law?</p>
