--- a/woven-men.html
+++ b/woven-men.html
@@ -217,7 +217,7 @@
         <h1 class="text-center text-3xl font-semibold mb-8">Woven Men All Products</h1>
         <div class="flex justify-center gap-4">
             <div class="w-1/4 p-4 bg-white shadow-lg">
-                <a href="woven-men-views.html"><img src="image/All Products/woven/men2.jpg" alt="Placeholder image of a grey t-shirt with a 'New Orleans Football' print" class="mb-4"></a>
+                <a href="woven-man-img.html"><img src="image/All Products/woven/men1.jpg" alt="Placeholder image of a grey t-shirt with a 'New Orleans Football' print" class="w-48  mb-4"></a>
                 <h2 class="text-center text-lg">Mens 001</h2>
             </div>
             <div class="w-1/4 p-4 bg-white shadow-lg">
