--- a/about.html
+++ b/about.html
@@ -269,6 +269,11 @@
 
 
             </p>
+            <p class="">
+                <i class="fas fa-phone-alt "></i>
+                +880 1715474594  (WhatsApp)
+
+            </p>
         </div>
         <div>
             <h3 class="text-xl font-bold mb-3">Useful Links:</h3>
