--- a/index.html
+++ b/index.html
@@ -456,6 +456,11 @@
                 +880 1711357828<br>
 
             </p>
+            <p class="">
+                <i class="fas fa-phone-alt "></i>
+                +880 1715474594  (WhatsApp)
+
+            </p>
         </div>
         <div>
             <h3 class="text-xl font-bold mb-3">Useful Links:</h3>
