--- a/submit-query.html
+++ b/submit-query.html
@@ -271,6 +271,11 @@
                 +880 1711357828<br>
 
             </p>
+            <p class="">
+                <i class="fas fa-phone-alt "></i>
+                +880 1715474594  (WhatsApp)<br>
+
+            </p>
         </div>
         <div>
             <h3 class="text-xl font-bold mb-3">Useful Links:</h3>
