--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                 </div>
                 
-                <div class=" sourcing-text font-bold text-[#051744] text-lg">
+                <div class=" sourcing-text sourcing font-bold text-[#051744] text-lg">
                     Export Oriented Buying & Sourcing House
                 </div>
                 <div class="social-icons ">
@@ -42,7 +42,7 @@
                         <i class="fa-2x fab fa-instagram"></i>
                     </a>
 
-                    <a href="https://www.whatsapp.com/" target="_blank" class="ml-6 text-[#051744]">
+                    <a href="https://wa.me/01768766333" target="_blank" class="ml-6 text-[#051744]">
                         <i class=" fa-2x fab fa-whatsapp"></i>
                     </a>
                     <a href="https://www.linkedin.com/login" target="_blank" class="ml-6 text-[#051744]">
@@ -458,7 +458,7 @@
             </p>
             <p class="">
                 <i class="fas fa-phone-alt "></i>
-                +880 1715474594  (WhatsApp)
+                +880 1715474594(WhatsApp)
 
             </p>
         </div>
