--- a/news-events.html
+++ b/news-events.html
@@ -25,7 +25,7 @@
                     <a href="index.html"> <img class="  " src="image/logo.jpg""></a>
                   
                 </div>
-                <div class=" sourcing-text font-bold text-[#051744] text-lg">
+                <div class=" sourcing-text sourcing font-bold text-[#051744] text-lg">
                         Export Oriented Buying & Sourcing House
                 </div>
                 <div class="social-icons ">
