--- a/woven-women.html
+++ b/woven-women.html
@@ -311,7 +311,7 @@
             <div class="container mx-auto flex justify-between items-center">
                 <div class="text-gray-400">&copy; 2024 Welldone Sourcing. All rights reserved.</div>
                 <div class="flex items-center">
-                    <div class="text-gray-400 mr-2">Designed and Developed by OS IT Solutions Ltd.</div>
+                    <a href="https://www.ositsltd.com/"><div class="text-gray-400 mr-2">Designed and Developed by OS IT Solutions Ltd.</div></a>
                     <a href="https://www.ositsltd.com/" class="flex items-center">
                         <img src="image/OSit.jpg" alt="Logo" class="h-6">
                     </a>
